<resources>
    <string name="app_name">AppStudy</string>
    <string name="login_title">用户登陆</string>
    <string name="login_cut_account">切换账号</string>
    <string name="login_input_name">输入用户名</string>
    <string name="login_input_pass">输入密码</string>
    <string name="login_sign_in">点击登陆</string>
    <string name="reg_submit">确定</string>
    <string name="reg_phone">输入手机号码</string>
    <string name="reg_pass">输入密码</string>
    <string name="reg_rpass">再次输入密码</string>
    <string name="reg_title">用户注册</string>
    <string name="validate_title">手机验证</string>
    <string name="validate_code">验证码</string>
    <string name="validate_getcode">获取验证码</string>
    <string name="exit">再次点击退出</string>
    <string name="account_format_error">账号格式不正确</string>
    <string name="pwd_format_error">密码格式不正确</string>
    <string name="network_fail">网络请求失败</string>
    <string name="data_load_fail">数据加载失败</string>
    <string name="data_format_error">数据格式错误</string>
    <string name="no_data_return">没有返回数据</string>
    <string name="fast_reg">快速注册</string>
    <string name="reset_pwd">重置密码</string>
    <string name="code_send_success">获取验证码</string>
    <string name="code_send_fail">获取验证码失败</string>
    <string name="code_validate_fail">递交验证码失败</string>
    <string name="phone_format_error">手机格式错误</string>
    <string name="error">发生错误</string>
    <string name="email_format_error">邮件格式错误</string>
    <string name="pwd_twice_error">两次密码不一致</string>
    <string name="email_address">邮箱地址</string>
    <string name="resetpwd">密码重置</string>
    <string name="userinfo">个人信息</string>
    <string name="save">保存</string>
    <string name="setting">系统设置</string>
    <string name="account_safe">账号与安全</string>
    <string name="nightmode">夜间模式</string>
    <string name="versionupdate">版本更新</string>
    <string name="infoinschool">校内信息</string>
    <string name="role">角色</string>
    <string name="school">学校</string>
    <string name="yuanxi">院系</string>
    <string name="glass">班级</string>
    <string name="startyear">入学年份</string>
    <string name="input_suggest">请输入建议</string>
    <string name="send">发送</string>
    <string name="minletter_error">字数不能少于15字</string>
    <string name="needlogin_error">请登录</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="not_need_update">不需要更新</string>
    <string name="email">输入邮箱地址</string>
    <string name="update_pwd">修改密码</string>
    <string name="oldpwd">输入原密码</string>
    <string name="newpwd">输入新密码</string>
    <string name="repwd">再次输入密码</string>
    <string name="download_error">下载失败</string>
    <string name="again_cancel">再次点击取消</string>
</resources>
