<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <hhh.appstudy.view.TitleView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_tv_right_visibility="visable"
        app:tv_title="@string/login_title"
        app:tv_right="@string/login_cut_account"
        />
    <hhh.appstudy.view.MEditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        app:me_label_src="@drawable/user"
        app:me_hint="@string/login_input_name"
        app:me_del_enable="true"
        app:me_input_type="normal"
        />
    <hhh.appstudy.view.MEditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        app:me_label_src="@drawable/user"
        app:me_hint="@string/login_input_pass"
        app:me_input_type="password"
        app:me_del_enable="true"
        app:me_eye_enable="true"
        />
    <Button
        android:id="@+id/login_sign_in"
        android:background="@drawable/select_bt_bg"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_18"
        android:text="@string/login_sign_in"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_reg"
            android:padding="10dp"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/text_color"
            android:layout_alignParentBottom="true"/>
        <TextView
            android:id="@+id/login_reset_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_pwd"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/text_color"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>