<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <hhh.appstudy.view.TitleView
        android:id="@+id/reg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_tv_right_visibility="visable"
        app:tv_title="@string/reg_title"
        app:tv_right="@string/reg_submit"
        />
    <hhh.appstudy.view.MEditText
        android:id="@+id/reg_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        app:me_label_src="@drawable/user"
        app:me_hint="@string/email_address"
        app:me_del_enable="true"
        app:me_input_type="normal"
        />
    <hhh.appstudy.view.MEditText
        android:id="@+id/reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        app:me_label_src="@drawable/user"
        app:me_hint="@string/reg_pass"
        app:me_input_type="password"
        app:me_del_enable="true"
        app:me_eye_enable="true"
        />
    <hhh.appstudy.view.MEditText
        android:id="@+id/reg_rpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        app:me_label_src="@drawable/user"
        app:me_hint="@string/reg_rpass"
        app:me_input_type="password"
        app:me_del_enable="true"
        app:me_eye_enable="true"
        />

</LinearLayout>