<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <hhh.appstudy.view.TitleView
        android:id="@+id/school_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_title="@string/infoinschool"
        />
    <hhh.appstudy.view.UserInfoView
        android:id="@+id/school_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:uv_label="@string/role"
         app:uv_photo_visible="gone"
        app:uv_next_visible="gone"
        app:uv_input_enable="false"
         android:layout_marginLeft="@dimen/margin_16"
         android:layout_marginRight="@dimen/margin_16"
    />
    <hhh.appstudy.view.UserInfoView
        android:id="@+id/school_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:uv_label="@string/school"
        app:uv_photo_visible="gone"
        app:uv_next_visible="gone"
        app:uv_input_enable="true"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        />
    <hhh.appstudy.view.UserInfoView
        android:id="@+id/school_yuanxi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:uv_label="@string/yuanxi"
        app:uv_photo_visible="gone"
        app:uv_next_visible="gone"
        app:uv_input_enable="true"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        />
    <hhh.appstudy.view.UserInfoView
        android:id="@+id/school_glass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:uv_label="@string/glass"
        app:uv_photo_visible="gone"
        app:uv_next_visible="gone"
        app:uv_input_enable="true"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        />
    <hhh.appstudy.view.UserInfoView
        android:id="@+id/school_intime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:uv_label="@string/startyear"
        app:uv_photo_visible="gone"
        app:uv_next_visible="gone"
        app:uv_input_enable="false"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        />
    <Button
        android:id="@+id/school_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="@dimen/font_size_18"
        android:textColor="@android:color/white"
        android:background="@drawable/select_bt_bg"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        />
</LinearLayout>